# text2cypher-cleanup-public

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: test.yml
data/: eval.parquet  train.parquet
src/text2cypher_cleanup/: main.py
src/text2cypher_cleanup/analysis/: dataset_issues_analyzer.py  issues_detector.py
src/text2cypher_cleanup/database/: neo4j_demo_db.py
src/text2cypher_cleanup/utils/: constants.py  llm_setup.py  logger.py
tests/: __init__.py  test_additional_modules.py
